Update html for restaurants

--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -31,16 +31,16 @@
       <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
 
       <section class="menu">
-        <div>
-          <header class="menu__header">
+        <!-- <div> -->
+          <div class="menu__header">
             <h1 class="menu__title">À la française</h1>
             <div class="card__heart">
               <i class="fa fa-heart full__heart" aria-hidden="true"></i>
               <i class="fa-regular fa-heart empty__heart"></i>
             </div>
-          </header>
+          </div>
           
-            <div>
+            <!-- <div> -->
               <section class="menu__list">
                 <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
@@ -81,7 +81,7 @@
 
                 </article>
               </section>
-              <section>
+              <!-- <section> -->
             <div>
               <section class="menu__list">
                 <h2 class="menu__title__h2">PLATS</h2>
@@ -124,9 +124,9 @@
                 </article>
               </section>
             </div>
-              <section>
+              <!-- <section> -->
             <div>
-              <section class="menu__list">
+              <div class="menu__list">
                 <h2 class="menu__title__h2">DESSERTS</h2>
                 <article class="desserts__item">
                   <div class="desserts__info">
@@ -137,10 +137,11 @@
                     <p class="desserts__price">18€</p>
                     <div class="check">
                       <i class="fa-solid fa-circle-check enter__icon"></i>
+                    </div>
                   </div>
                 </article>
                 <article class="desserts__item">
-                    <div class="desserts__info">
+                  <div class="desserts__info">
                     <div class="desserts__text">
                       <h3 class="desserts__content">Macaron au chocolat d'exception</h3>
                       <p class="desserts__detail">Et glace à la vanille de Madagascar</p>
@@ -149,7 +150,7 @@
                     <div class="check">
                       <i class="fa-solid fa-circle-check enter__icon"></i>
                     </div>
-                    </div>
+                    <!-- </div> -->
                   </div>
                 </article>
                 <article class="desserts__item">
@@ -164,14 +165,14 @@
                     </div>
                   </div>
                 </article>
-              </section>
+              </div>
 
-              </section>
+              <!-- </section> -->
             </div>
             <div class="commander">
               <a class="commander__btn">Commander</a>
             </div>
-        </div>
+        <!-- </div> -->
       </section>
 
     </main>
