--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -17,172 +17,199 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
-        <a href="./index.html">
-          <i class="header__arrow fas fa-arrow-left"></i>
-        </a>
-        <img src="./images/logo/ohmyfood.png" alt="logo"/>
+      <a href="./index.html">
+        <i class="header__arrow fas fa-arrow-left"></i>
+      </a>
+      <img src="./images/logo/ohmyfood.png" alt="logo" />
     </header>
     <main>
-      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
+      <img
+        src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        class="cardimg"
+        alt="image montrant un plat"
+      />
 
       <section class="menu">
-        <div>
-          <div class="menu__header">
-            <h1 class="menu__title">La note enchantée</h1>
-            <div class="card__heart">
-              <i class="fa fa-heart full__heart" aria-hidden="true"></i>
-              <i class="fa-regular fa-heart empty__heart"></i>
-            </div>
+        <!-- <div> -->
+        <div class="menu__header">
+          <h1 class="menu__title">La note enchantée</h1>
+          <div class="card__heart">
+            <i class="fa fa-heart full__heart" aria-hidden="true"></i>
+            <i class="fa-regular fa-heart empty__heart"></i>
           </div>
-          <div class="menu__enter">
-            <div class="menu__all">
-              <section class="menu__list">
-                <h2 class="menu__title__h2">ENTRÉES</h2>
-                <article class="enter__item">
-                  <div class="enter__info">
-                    <div class="enter__text">
-                      <h3 class="enter__content">Ravioles de foie gras</h3>
-                      <p class="enter__detail">Accompagnées de leur crème à la truffe</p>
-                    </div>
-                    <p class="enter__price">25€</p>
-                  </div>
-                </article>
-                <article class="enter__item">
-                  <div class="enter__info">
-                    <div class="enter__text">
-                      <h3 class="enter__content">Caviar</h3>
-                      <p class="enter__detail">Sur blini à la farine de blé noir</p>
-                    </div>
-                    <div class="enter__price">35€</div>
-                    <div class="check">
-                      <i class="fa-solid fa-circle-check enter__icon"></i>
-                    </div>
-                  </div>
-                </article>
-                <article class="enter__item">
-                  <div class="enter__info">
-                    <div class="enter__text">
-                      <h3 class="enter__content">Homard et espuma de potiron</h3>
-                      <p class="enter__detail">Marinés aux zestes d'orange</p>
-                    </div>
-                    <p class="enter__price">20€</p>
-                  </div>
-                </article>
-                <article class="enter__item">
-                        <div class="enter__info">
-                          <div class="enter__text">
-                            <h3 class="enter__content">Foie gras de canard cuit entier</h3>
-                            <p class="enter__detail">Confiture de figue et pain toasté</p>
-                          </div>
-                          <p class="enter__price">35€</p>
-                        </div>
-              </section>
-              <section>
-                <div class="menu__enter">
-            <div>
-              <section class="menu__list">
-                <h2 class="menu__title__h2">PLATS</h2>
-                <article class="flat__item">
-                  <div class="flat__info">
-                    <div class="flat__text">
-                      <h3 class="flat__content">Noix de coquille Saint-Jacques</h3>
-                      <p class="flat__detail">Sur lit de purée de céléri-rave</p>
-                    </div>
-                    <p class="flat__price">40€</p>
-                  </div>
-                </article>
-                <article class="flat__item">
-                  <div class="flat__info">
-                    <div class="flat__text">
-                      <h3 class="flat__content">Langoustine poêlée</h3>
-                      <p class="flat__detail">Purée de patate douce</p>
-                    </div>
-                    <div class="flat__price">35€</div>
-                    <div class="check">
-                      <i class="fa-solid fa-circle-check enter__icon"></i>
-                    </div>
-                  </div>
-                </article>
-                <article class="flat__item">
-                  <div class="flat__info">
-                    <div class="flat__text">
-                      <h3 class="flat__content">Mijoté de queue de bœuf</h3>
-                      <p class="flat__detail">Et riz sauvage aux zeste de citron</p>
-                    </div>
-                    <p class="flat__price">45€</p>
-                  </div>
-
-                </article>
-              </section>
-              <section>
-                <div class="menu__enter">
-            <div class="menu__all">
-              <section class="menu__list">
-                <h2 class="menu__title__h2">DESSERTS</h2>
-                <article class="desserts__item">
-                  <div class="desserts__info">
-                    <div class="desserts__text">
-                      <h3 class="desserts__content">Macaron noisette et chocolat</h3>
-                      <p class="desserts__detail">Glace au caramel brun et sel de Guérande</p>
-                    </div>
-                    <p class="desserts__price">18€</p>
-                  </div>
-                </article>
-                <article class="desserts__item">
-                    <div class="desserts__info">
-                    <div class="desserts__text">
-                      <h3 class="desserts__content">Baba au rhum revisité</h3>
-                      <p class="desserts__detail">Avec son coulis de citron</p>
-                    </div>
-                    <div class="desserts__price">22€</div>
-                    <div class="check">
-                      <i class="fa-solid fa-circle-check enter__icon"></i>
-                    </div>
-                  </div>
-                </article>
-                <article class="desserts__item">
-                  <div class="desserts__info">
-                    <div class="desserts__text">
-                      <h3 class="desserts__content">Tarte au citron meringuée</h3>
-                      <p class="desserts__detail">Déstructurée</p>
-                    </div>
-                    <p class="desserts__price">23€</p>
-                  </div>
-
-                </article>
-              </section>
+        </div>
+        <section class="menu__list">
+          <h2 class="menu__title__h2">ENTRÉES</h2>
+          <article class="enter__item">
+            <div class="enter__info">
+              <div class="enter__text">
+                <h3 class="enter__content">Ravioles de foie gras</h3>
+                <p class="enter__detail">
+                  Accompagnées de leur crème à la truffe
+                </p>
+              </div>
+              <p class="enter__price">25€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
             </div>
-            <div class="commander">
-            <a class="commander__btn">Commander</a>
+          </article>
+          <article class="enter__item">
+            <div class="enter__info">
+              <div class="enter__text">
+                <h3 class="enter__content">Caviar</h3>
+                <p class="enter__detail">Sur blini à la farine de blé noir</p>
+              </div>
+              <div class="enter__price">35€</div>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
             </div>
-          </div>
+          </article>
+          <article class="enter__item">
+            <div class="enter__info">
+              <div class="enter__text">
+                <h3 class="enter__content">Homard et espuma de potiron</h3>
+                <p class="enter__detail">Marinés aux zestes d'orange</p>
+              </div>
+              <p class="enter__price">20€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+          <article class="enter__item">
+            <div class="enter__info">
+              <div class="enter__text">
+                <h3 class="enter__content">Foie gras de canard cuit entier</h3>
+                <p class="enter__detail">Confiture de figue et pain toasté</p>
+              </div>
+              <p class="enter__price">35€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+        </section>
+        <!-- <section> -->
+        <!-- <div class="menu__enter"> -->
+        <!-- <div> -->
+        <section class="menu__list">
+          <h2 class="menu__title__h2">PLATS</h2>
+          <article class="flat__item">
+            <div class="flat__info">
+              <div class="flat__text">
+                <h3 class="flat__content">Noix de coquille Saint-Jacques</h3>
+                <p class="flat__detail">Sur lit de purée de céléri-rave</p>
+              </div>
+              <p class="flat__price">40€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+          <article class="flat__item">
+            <div class="flat__info">
+              <div class="flat__text">
+                <h3 class="flat__content">Langoustine poêlée</h3>
+                <p class="flat__detail">Purée de patate douce</p>
+              </div>
+              <div class="flat__price">35€</div>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+          <article class="flat__item">
+            <div class="flat__info">
+              <div class="flat__text">
+                <h3 class="flat__content">Mijoté de queue de bœuf</h3>
+                <p class="flat__detail">Et riz sauvage aux zeste de citron</p>
+              </div>
+              <p class="flat__price">45€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+        </section>
+        <!-- <section> -->
+        <!-- <div class="menu__enter"> -->
+        <!-- <div class="menu__all"> -->
+        <section class="menu__list">
+          <h2 class="menu__title__h2">DESSERTS</h2>
+          <article class="desserts__item">
+            <div class="desserts__info">
+              <div class="desserts__text">
+                <h3 class="desserts__content">Macaron noisette et chocolat</h3>
+                <p class="desserts__detail">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+              </div>
+              <p class="desserts__price">18€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+          <article class="desserts__item">
+            <div class="desserts__info">
+              <div class="desserts__text">
+                <h3 class="desserts__content">Baba au rhum revisité</h3>
+                <p class="desserts__detail">Avec son coulis de citron</p>
+              </div>
+              <div class="desserts__price">22€</div>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+          <article class="desserts__item">
+            <div class="desserts__info">
+              <div class="desserts__text">
+                <h3 class="desserts__content">Tarte au citron meringuée</h3>
+                <p class="desserts__detail">Déstructurée</p>
+              </div>
+              <p class="desserts__price">23€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check enter__icon"></i>
+              </div>
+            </div>
+          </article>
+        </section>
+        <!-- </div> -->
+        <div class="commander">
+          <a class="commander__btn">Commander</a>
+        </div>
+        <!-- </div> -->
       </section>
-
     </main>
     <footer class="footer">
-            <h2 class="footer__title">Ohmyfood</h2>
-            <nav>
-              <a class="footer__link">
-                <i class="fa-solid fa-utensils"></i>
-                <h3>Proposer un restaurant</h3>
-              </a>
-              <a class="footer__link footer__space">
-                <i class="fa-solid fa-handshake-angle"></i>
-                <h3>Devernir partenaire</h3>
-              </a>
-              <a class="footer__link">
-                <h4 class="footer__style">Mentions légales</h4>
-              </a>
-              <a class="footer__link">
-                <h4 class="footer__style">Contact</h4>
-              </a>
-            </nav>
-          </footer>
-
+      <h2 class="footer__title">Ohmyfood</h2>
+      <nav>
+        <a class="footer__link">
+          <i class="fa-solid fa-utensils"></i>
+          <h3>Proposer un restaurant</h3>
+        </a>
+        <a class="footer__link footer__space">
+          <i class="fa-solid fa-handshake-angle"></i>
+          <h3>Devernir partenaire</h3>
+        </a>
+        <a class="footer__link">
+          <h4 class="footer__style">Mentions légales</h4>
+        </a>
+        <a class="footer__link">
+          <h4 class="footer__style">Contact</h4>
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
