--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -31,7 +31,7 @@
       <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="cardimg" alt="image montrant un plat"/>
 
       <section class="menu">
-        <div>
+        <!-- <div> -->
           <div class="menu__header">
             <h1 class="menu__title">La palette du goût</h1>
             <div class="card__heart">
@@ -40,7 +40,7 @@
             </div>
           </div>
           
-            <div>
+            <!-- <div> -->
               <section class="menu__list">
                 <h2 class="menu__title__h2">ENTRÉES</h2>
                 <article class="enter__item">
